Add miscellaneous project files

--- a/Problems/Merge sorted lists/task-info.yaml
+++ b/Problems/Merge sorted lists/task-info.yaml
@@ -20,5 +20,5 @@ files:
         return c
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/10658#comment
-status: Failed
+status: Solved
 record: -1
