--- a/Web Scraper/Soup, Sweet Soup/task-info.yaml
+++ b/Web Scraper/Soup, Sweet Soup/task-info.yaml
@@ -138,6 +138,7 @@ files:
 feedback_link: https://hyperskill.org/projects/145/stages/785/implement#comment
 status: Solved
 feedback:
-  message: Congratulations!
-  time: Sun, 16 May 2021 19:20:40 UTC
+  message: Well done! You've finished the project. Select a new project on <a href="https://hyperskill.org/projects">JetBrains
+    Academy</a> to continue learning.
+  time: Mon, 09 Aug 2021 04:13:45 UTC
 record: 6
